fix: dark mode color, add btn switch dark mode, review style general

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
     --text-color: #043d75;
     --text-color-secondary:#6c757d;
     --border-radius:6px;
-    --primary-color:#3B82F6;
+    --primary-color:#7254f3;
     --primary-color-text:#ffffff;
     --surface-ground:#eff3f8;
     --surface-section:#ffffff;
@@ -133,7 +133,7 @@
     --red-300:#ff8780;
     --red-400:#ff6259;
     --red-500:#ff3d32;
-    --red-600:#d9342b;
+    --red-600:#FB0909;
     --red-700:#b32b23;
     --red-800:#8c221c;
     --red-900:#661814;
